# ijc2

./: .gitignore  CMakeLists.txt  Makefile  README.md  htab.h  htab_bucket_count.c  htab_clean_item.c  htab_clear.c  htab_erase.c  htab_find.c  htab_for_each.c  htab_free.c  htab_hash_function.c  htab_init.c  htab_init_item.c  htab_internal.h  htab_lookup_add.c  htab_move.c  htab_size.c  htab_test.cpp  io.c  io.h  tail.c  tail.txt  wordcount  wordcount-.cpp  wordcount-.txt  wordcount-dynamic  wordcount.c  wordcount.txt
tests/: file-ok.txt  ijctest
tests/test-cases/01/: tail_in.txt  test_output.txt
tests/test-cases/02/: tail_in.txt  test_err.txt  test_output.txt
tests/test-cases/03/: in.txt  tail_in.txt
tests/test-cases/04/: in.txt
tests/test-cases/05/: in.txt  tail_in.txt
tests/test-cases/06/: in.txt  tail_in.txt  test_output.txt
tests/test-cases/07/: in.txt  out.txt
tests/test-cases/08/: in.txt  out.txt  tail_in.txt
tests/test-cases/09/: in.txt  tail_in.txt  test_err.txt
tests/test-cases/1/: in.txt
tests/test-cases/10/: in.txt  tail_in.txt  test_output.txt
tests/test-cases/2/: in.txt
